syntax = "proto3";

package category;

service CategoryService {
  rpc GetCategory(GetCategoryRequest) returns (CategoryResponse) {};
  rpc GetCategoriesBatch(GetCategoriesBatchRequest) returns (CategoriesBatchResponse) {};
}

message GetCategoryRequest {
    string id = 1;
}

message GetCategoriesBatchRequest {
    repeated string ids = 1;
}

message CategoryResponse {
    string id = 1;
    string name = 2;
    string slug = 3;
    string description = 4;
    string parentId = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message CategoriesBatchResponse {
    repeated CategoryResponse categories = 1;
}

